<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/SPiDLogo"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:src="@drawable/spidlogo" />

        <ProgressBar
            android:id="@+id/activity_main_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/activity_main_textview_userinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text=""
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/activity_main_button_agreements"
            style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/getAgreements" />

        <Button
            android:id="@+id/activity_main_button_accept_agreement"
            style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/acceptAgreement" />

        <Button
            android:id="@+id/activity_main_button_logout"
            style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/logoutFromSpid" />

    </LinearLayout>
</ScrollView>